# Team22

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  TranslationEngine.cpp  TranslationEngine.h  cmake_install.cmake
Code/: BinaryParser.cpp  BinaryParser.h  CMakeLists.txt  Driver.cpp  FileAssembler.cpp  TranslationEngine.cpp
Code/util/: DataStructures.cpp
GenTestSite/: config.toml
GenTestSite/content/: _index.md  contact.md
GenTestSite/content/about/: _index.md
GenTestSite/content/deliverables/: _index.md  dr1.md  dr1.md~  requirements.md  requirements.md~  team_standards.md  technical.md  technical.md~
GenTestSite/content/post/: _index.md
GenTestSite/content/requirements/: _index.md  _index.md~
GenTestSite/content/schedule/: _index.md  _index.md~  schedule.md~
GenTestSite/public/: 404.html  index.html  index.xml  sitemap.xml
GenTestSite/public/about/: index.html  index.xml
GenTestSite/public/archive/: config.yaml  index.xml  sitemap.xml
GenTestSite/public/categories/: index.html  index.xml
GenTestSite/public/contact/: index.html
GenTestSite/public/deliverables/: index.html  index.xml
GenTestSite/public/post/: index.html  index.xml
GenTestSite/public/requirements/: index.html  index.xml
GenTestSite/public/schedule/: index.html  index.xml
GenTestSite/public/tags/: index.html  index.xml
RunDirectory/: BinaryParserTest.cpp  IntegerOverflow.cpp  catchTranslation.cfg  negative174903019.fail
ananke/layouts/partials/: site-header.html
doc/: doxygen.conf
include/modules/BinaryParser/: BinaryIterator.h  BinaryParser.h
include/modules/FileAssembler/: FileAssembler.h
include/modules/TranslationEngine/: ASTListener.h  CrudeListener.h  GenTestBaseListener.h  GenTestLexer.h  GenTestListener.h  GenTestParser.h  TranslationEngine.h
include/modules/util/: DataStructures.h  Util.h
install/: gentest_installer.sh
prototype-1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  GenTest  Makefile  cmake_install.cmake  gentest_test
prototype-1/src/: main.cpp
src/: main.cpp
src/modules/: TranslationEngine.h
src/modules/BinaryParser/: BinaryIterator.cpp  BinaryParser.cpp
src/modules/FileAssembler/: FileAssembler.cpp
src/modules/TranslationEngine/: ASTListener.cpp  CrudeListener.cpp  GenTest.interp  GenTestLexer.cpp  GenTestLexer.interp  GenTestLexer.tokens  GenTestParser.cpp  TranslationEngine.cpp
src/modules/util/: DataStructures.cpp  Util.cpp
test/: TestMain.cpp
test/modules/: TestBinaryParser.cpp  TestTranslationEngine.cpp
test/test_data/: EulerModified.cpp  IntegerOverflow.cpp  catchTranslation.cfg  gtestTranslation.cfg
website/content/: config.toml  config.yaml
website/static_files/: 404.html  index.html  index.xml  sitemap.xml
website/static_files/categories/: index.html  index.xml
website/static_files/css/: style.css.map  style.min.32490ef5e045941875f83ccc74b258f825bcfbde17c61965681b490cc65026a2.css  style.min.53d5b42e8bbdc03eee23662279ec2ea50247ae8dba10652ab8260c3258c679a1.css
website/static_files/post/: index.html  index.xml
(+143 files in other folders)
